# mxpy

./: .gitignore  AUTHORS  Makefile.am  Makefile.tmpl  README  autogen.sh  configure.ac  mxpy.pc.in  pymx.pc.in  pynbtk.pc.in
examples/: Makefile.am  template.py  test-combo-box.py  test-draggable.py  test-droppable.py  test-entry.py  test-expander.py  test-item-view.py  test-label.py  test-progress-bar.py  test-scroll-grid.py  test-styles.py
mx/: Makefile.am  __init__.py  mx-base-types.defs  mx-base.defs  mx.override  mxmodule.c
nbtk/: Makefile.am  __init__.py  nbtk-base-types.defs  nbtk-base.defs  nbtk.override  nbtkmodule.c
