EXTRA_DIST = \
	test-expander.py \
	test-item-view.py \
	test-label.py \
	test-progress-bar.py \
	test-scroll-grid.py \
	style/border-image-dark.png \
	style/border-image-light.png \
	style/border-image.png \
	style/cyan-button.png \
	style/default.css \
	style/green-button.png \
	style/lime-button.png \
	style/red-button.png \
	style/redhand.png \
	style/rounded-corner.png

